Aterando menu para fixed, com z-index

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,6 +5,8 @@
   border: 0;
   box-sizing: border-box;
 }
+html {
+}
 /* *************************SMARTPHONE ******************************************* */
 body {
   width: 100%;
@@ -25,10 +27,14 @@ body {
 nav {
   width: 100%;
   height: 5vh;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.9);
   display: flex;
   justify-content: left;
   align-items: center;
+  position: fixed;
+  z-index: 3;
+  right: 0px;
+  top: 0px;
 }
 nav a {
   font-size: 1.4em;
@@ -44,6 +50,7 @@ a:hover {
 main {
   margin-left: 5%;
   margin-right: 5%;
+  padding-top: 5vh;
 }
 
 section {
@@ -190,7 +197,6 @@ footer a {
     min-width: 500px;
   }
   nav {
-    background: rgba(0, 0, 0, 0.5);
     padding: auto;
     padding-left: 10vw;
   }
@@ -338,7 +344,6 @@ footer a {
     min-width: 768px;
   }
   nav {
-    background: rgba(0, 0, 0, 0.5);
     margin-left: 0;
     padding: 0;
   }
